--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -63,7 +63,7 @@
             android:onClick="onClick_Main_Noten_Quick"  >
 
             <TextView
-                android:id="@+id/TextView01"
+                android:id="@+id/txtMainNotenQuick"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerHorizontal="true"
